--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -42,6 +42,14 @@ footer .social-cards .card .link {
     transition: all 300ms ease-in-out;
 }
 
+.newsletter .link {
+    --s: 3rem;
+    width: var(--s);
+    height: var(--s);
+    padding: 12px;
+    border: 1px solid var(--d-30);
+}
+
 .social-cards .title {
     text-align: start;
     font-family: 'CodePro';
@@ -60,8 +68,7 @@ footer .social-cards .card .link {
     left: 15%;
 }
 
-.social-cards .card:hover .link,
-.newsletter .link {
+.social-cards .card:hover .link {
     color: var(--o-60);
     border: 2px solid var(--o-80);
 }
@@ -157,17 +164,16 @@ footer .navigation .card {
 footer .f2 {
     grid-row: 2/ span 1;
     grid-column: 3 / span 3;
-    display: grid;
-    grid-template-rows: calc(70% - 12px) 30%;
+    display: flex;
+    flex-wrap: wrap;
     gap: 12px;
-    align-content: center;
+    align-content: stretch;
 }
 
 footer .f2 .newsletter {
-    grid-row: 1 / span 1;
-    grid-column: 1 / span 5;
     justify-content: center;
-    align-content: center;
+    flex: 1 1 100%;
+    /* align-content: stretch; */
 }
 
 footer .f2 .newsletter .card {
@@ -175,11 +181,10 @@ footer .f2 .newsletter .card {
 }
 
 footer .f2 .copyrights {
-    grid-row: 2 / span 1;
-    grid-column: 1 / span 5;
     justify-content: center;
+    flex: 1 1 100%;
     /* align-items: center; */
-    align-content: center;
+    /* align-content: stretch; */
 }
 
 
