--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -100,10 +100,96 @@
 }
 
 .animImg {
-    position: absolute;
-    bottom: 0px;
+    /* position: absolute; */
+    /* bottom: 0px;
     left: 0px;
-    width: 300px;
+    width: 300px; */
+    position: inherit;
+    display: block;
     object-fit: contain;
-    filter: contrast(2) brightness(0.3) blur(1px);
+}
+
+.service {
+    border: 2px solid var(--d-10);
+    padding: 12px;
+    border-radius: 12px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12px;
+    align-items: stretch;
+    justify-content: start;
+}
+
+.card {
+    background: var(--d-10);
+    color: var(--o-95);
+    border-radius: 12px;
+    padding: calc(12px * 3);
+}
+
+.serviceIcon {
+    --s: 4rem;
+    font-size: 2.4rem;
+    color: var(--o-65);
+    padding: 12px;
+    background: var(--d-10);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    height: var(--s);
+    width: var(--s);
+    border-radius: 12px;
+    border: 2px solid var(--d-30);
+}
+
+.serviceFlex {
+    display: flex;
+    gap: 12px;
+    align-items: center;
+}
+
+.serviceLink {
+    display: inline-flex;
+    height: 10%;
+    gap: 12px;
+    text-decoration: none;
+    /* background-color: red; */
+    align-items: center;
+}
+
+.serviceLinkIcon {
+    --s: 2.4rem;
+    width: var(--s);
+    height: var(--s);
+    font-size: 1.2rem;
+    color: var(--o-65);
+    border: 1px solid var(--g-50);
+    border-radius: 100%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.serviceLinkSpan {
+    font-family: 'MonoBold';
+    color: var(--g-50);
+    text-transform: uppercase;
+    font-size: 1rem;
+}
+
+.serviceDescription {
+    color: var(--g-50);
+    font-size: 16x;
+    line-height: 1.5;
+    font-family: 'MonoLight';
+}
+
+.servicePrice {
+    color: var(--o-80);
+    font-family: 'BebasBold';
+    font-size: 1.8rem;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    text-transform: uppercase;
 }
