--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -142,6 +142,12 @@
     border: 2px solid var(--d-30);
 }
 
+.reactIcons {
+    --s: 2.5rem;
+    height: var(--s);
+    width: var(--s);
+}
+
 .serviceFlex {
     display: flex;
     gap: 12px;
@@ -158,16 +164,17 @@
 }
 
 .serviceLinkIcon {
-    --s: 2.4rem;
+    --s: 2.5rem;
     width: var(--s);
     height: var(--s);
-    font-size: 1.2rem;
+    padding: 6px;
     color: var(--o-65);
     border: 1px solid var(--g-50);
     border-radius: 100%;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+    position: inherit;
+    /* display: inline-flex; */
+    /* align-items: center; */
+    /* justify-content: center; */
 }
 
 .serviceLinkSpan {
