--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,7 +1,16 @@
 .footer {
-    margin-left: 24px;
-    margin-right: 24px;
-    margin-bottom: 24px;
+    --fm: 24px;
+    margin-left: var(--fm);
+    margin-right: var(--fm);
+    margin-bottom: var(--fm);
+}
+
+.mFooter {
+    --fm: 12px;
+    margin-top: var(--saikia-content-gap);
+    margin-left: var(--fm);
+    margin-right: var(--fm);
+    margin-bottom: var(--saikia-content-gap);
 }
 
 .transitionAll500ms {
@@ -18,7 +27,60 @@
     border-radius: 12px;
 }
 
+.arrowIcon {
+    --is: 1.2rem;
+    width: var(--is);
+    height: var(--is);
+    position: inherit;
+}
 
+.grid_1 {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 12px;
+    padding-top: 12px;
+}
+
+.grid_2 {
+    grid-row: 2/ span 1;
+    grid-column: 3 / span 3;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12px;
+    align-content: stretch;
+}
+
+/* promo-card */
+.promoCardTitle {
+    color: var(--d-06);
+    letter-spacing: 2px;
+    font-family: 'MonoMedium';
+    font-size: 3em;
+    text-transform: uppercase;
+}
+
+.mPromoCardTitle {
+    color: var(--d-06);
+    letter-spacing: 2px;
+    font-family: 'Archive';
+    font-size: 2em;
+    text-transform: uppercase;
+}
+
+.promoCardText {
+    color: var(--d-06);
+    font-size: 2rem
+}
+
+.mPromoCardText {
+    color: var(--d-06);
+    font-size: 1.2em;
+    font-weight: 400;
+    font-family: 'Avalon';
+}
+
+/* social-cards */
 .socialCardIcon {
     --is: 5rem;
     width: var(--is);
@@ -28,14 +90,6 @@
     top: 10%;
     left: 10%;
 }
-
-.arrowIcon {
-    --is: 1.2rem;
-    width: var(--is);
-    height: var(--is);
-    position: inherit;
-}
-
 
 .socialCardLink {
     font-size: 20px;
@@ -51,16 +105,17 @@
     transition: all 300ms ease-in-out;
 }
 
-.newsLetterLink {
-    --s: 2.5rem;
-    width: var(--s);
-    height: var(--s);
+.mSocialCardLink {
+    background: var(--d-10);
     padding: 12px;
-    border: 1px solid var(--d-30);
+    border-radius: 12px;
+    border: 2px solid var(--d-20);
+    flex: 1;
     display: inline-flex;
     justify-content: center;
     align-items: center;
 }
+
 
 .socialCardTitle {
     text-align: start;
@@ -85,67 +140,22 @@
     border: 2px solid var(--o-80);
 }
 
-.navigationLink {
-    color: var(--g-50);
-    font-family: 'Avalon';
-    font-size: 16px;
-    text-transform: capitalize;
-}
-
-.navigationListTitle {
-    margin-left: 14px;
-}
-
-.navigationColumn {
-    text-wrap: nowrap;
-    /* padding-left: 30px; */
-}
-
-.newsLetterInput {
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid var(--g-50);
-    outline: none;
-    transition: border-bottom-color 0.3s;
-    margin-right: 10px;
-}
-
-.newsLetterInput:focus {
-    border-bottom: 1px solid var(--o-60);
-}
-
-.copyright * {
-    color: var(--g-50);
-    font-family: 'MonoLight';
-}
-
-.grid_1 {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 12px;
-    padding-top: 12px;
-}
-
-.socialCardContainer {
-    grid-row: 1 / span 2;
-    grid-column: 1 / span 2;
-    display: grid;
-    gap: 12px;
-}
-
 .socialCardBody {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.mSocialCardBody {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .socialCard:nth-child(1) {
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
 }
-
 
 .socialCard:nth-child(2) {
     grid-row: 1 / span 1;
@@ -162,6 +172,142 @@
     grid-row: 2 / span 1;
 }
 
+.socialCardContainer {
+    grid-row: 1 / span 2;
+    grid-column: 1 / span 2;
+    display: grid;
+    gap: 12px;
+}
+
+.mSocialCardContainer {
+    display: flex;
+    gap: 12px;
+    padding: 12px 0px;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* newsleter */
+.newsLetterLink {
+    --s: 2.5rem;
+    width: var(--s);
+    height: var(--s);
+    padding: 12px;
+    border: 1px solid var(--d-30);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mNewsLetterForm {
+    margin-top: 24px;
+    display: flex;
+    gap: 12px;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+}
+
+.mNewsLetterLink {
+    --s: 2.5rem;
+    width: var(--s);
+    height: var(--s);
+    padding: 12px;
+    border: 1px solid var(--d-30);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.newsLetterInput {
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid var(--g-50);
+    outline: none;
+    transition: border-bottom-color 0.3s;
+    margin-right: 10px;
+}
+
+.mNewsLetterInput {
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid var(--g-50);
+    outline: none;
+    transition: border-bottom-color 0.3s;
+    margin-right: 10px;
+    flex: 1;
+}
+
+.newsLetterInput:focus {
+    border-bottom: 1px solid var(--o-60);
+}
+
+.mNewsLetterInput:focus {
+    border-bottom: 1px solid var(--o-60);
+}
+
+.mNewsLetterTitle {
+    color: var(--g-50);
+    font-size: 14px;
+}
+
+.mNewsLetterText {
+    font-size: 18px;
+    text-transform: uppercase;
+    font-family: 'MonoMedium';
+}
+
+.newsLetterContainer {
+    justify-content: center;
+    flex: 1 1 100%;
+    /* align-content: stretch; */
+}
+
+.mNewsLetterContainer {
+    margin: 12px 0px;
+}
+
+.newsLetterCard {
+    padding: calc(12px * 3);
+}
+
+/* navigation */
+.navigationLink {
+    color: var(--g-50);
+    font-family: 'Avalon';
+    font-size: 16px;
+    text-transform: capitalize;
+}
+
+.mNavigationLink {
+    color: var(--g-50);
+    font-family: 'Avalon';
+    font-size: 14px;
+    text-transform: capitalize;
+}
+
+.navigationListTitle {
+    margin-left: 14px;
+}
+
+.mNavigationListTitle {
+    margin-left: 16px;
+    font-family: 'Archive';
+    color: var(--o-80);
+}
+
+.navigationColumn {
+    text-wrap: nowrap;
+    /* padding-left: 30px; */
+}
+
+.mNavigationColumn {
+    text-wrap: nowrap;
+    padding: 0px;
+    margin-top: 24px;
+    flex: 1 1 calc(50% - 12px);
+}
+
 .navigationContainer {
     grid-row: 1 / span 1;
     grid-column: 3 / span 3;
@@ -173,23 +319,14 @@
     padding: 20px;
 }
 
-.grid_2 {
-    grid-row: 2/ span 1;
-    grid-column: 3 / span 3;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 12px;
-    align-content: stretch;
+.mNavigationCard {
+    padding: 0px;
 }
 
-.newsLetterContainer {
-    justify-content: center;
-    flex: 1 1 100%;
-    /* align-content: stretch; */
-}
-
-.newsLetterCard {
-    padding: calc(12px * 3);
+/* copyrights */
+.copyright * {
+    color: var(--g-50);
+    font-family: 'MonoLight';
 }
 
 .copyright {
@@ -199,12 +336,39 @@
     /* align-content: stretch; */
 }
 
-
-
 .copyrightCardBody {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+}
+
+.mCopyrightCardBody {
+    /* d
+    d */
+}
+
+.mCopyrightTxt {
+    font-size: 12px;
+    font-family: 'MonoLight';
+    color: var(--g-70);
+    text-align: center;
+}
+
+.mCopyrightLinkContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* background-color: red; */
+    text-align: center;
+    margin-top: 24px;
+}
+
+.mCopyrightLinks {
+    text-decoration: none;
+    color: var(--g-70);
+    font-size: 14px;
+    padding: 0px;
+    line-height: 0.5;
 }
 
 .copyrightCardBody .left {
@@ -213,4 +377,14 @@
 
 .copyrightCardBody .right {
     font-size: 14px;
+}
+
+@media (max-width: 768px) {
+    .socialCardIcon {
+        --is: 2.5rem;
+        width: var(--is);
+        height: var(--is);
+        color: var(--o-60);
+        position: inherit;
+    }
 }
