--- a/src/styles/project-home.module.css
+++ b/src/styles/project-home.module.css
@@ -21,11 +21,24 @@
     padding: calc(12px * 2) calc(12px * 3);
 }
 
+.mprojectCardBody {
+    padding: 0px;
+}
+
 /* TYPOGRAPHY */
 .projectHeading {
     color: var(--o-65);
     font-family: "Archive";
     font-size: "4em";
+    text-transform: capitalize;
+    text-align: center;
+    padding-bottom: 12px;
+}
+
+.mprojectHeading {
+    color: var(--o-65);
+    font-family: "Archive";
+    font-size: "3em";
     text-transform: capitalize;
     text-align: center;
     padding-bottom: 12px;
@@ -58,10 +71,31 @@
     /* margin-bottom: 8px; */
 }
 
+.mpStack {
+    font-size: 14px;
+    font-weight: 500;
+    font-family: 'MonoLight';
+    color: var(--neon-green);
+    text-align: center;
+    /* margin-bottom: 8px; */
+}
+
 .pExcerpt {
     font-size: 1.2em;
     font-family: 'MonoMedium';
     color: var(--d-30)
+}
+
+.mpExcerpt {
+    /* font-size: 14px; */
+    font-family: 'MonoLight';
+    /* color: var(--d-30); */
+    line-height: 1.5;
+}
+
+.mpExcerpt p {
+    font-size: 14px;
+    color: var(--g-70);
 }
 
 /* mobile */
